Fix touite form alignment
Fix #52

--- a/static/bootstrap/css/bootstrap-theme-mysmeuh.css
+++ b/static/bootstrap/css/bootstrap-theme-mysmeuh.css
@@ -490,3 +490,8 @@ a.badge:visited {
 a.badge:hover {
 	color: #F4C021;
 }
+
+#touite_form .input-group-btn .btn {
+    top: 1px;
+    left: 3px;
+}
